--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-emoji-render": "^2.0.1",
+    "react-photo-view": "^1.2.6",
+    "react-twemoji": "^0.6.0",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
