cambio en header y supabase se agrego

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "daisyui": "^4.12.12",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.451.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
     "react-photo-view": "^1.2.6",
+    "react-router-dom": "^6.27.0",
     "react-twemoji": "^0.6.0",
     "theme-change": "^2.5.0"
   },
