--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.12",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.451.0",
     "react": "^18.3.1",
@@ -20,7 +22,8 @@
     "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.27.0",
     "react-twemoji": "^0.6.0",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
