--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-table": "^8.20.5",
     "bcryptjs": "^2.4.3",
     "daisyui": "^4.12.12",
     "dotenv": "^16.4.5",
