--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      { "handle": "filesystem" },
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
   
