--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.27.0",
     "react-twemoji": "^0.6.0",
